Checkpoint: Implementação de suporte a idioma inglês em toda a aplicação: - Ficheiros de tradução expandidos (PT e EN) com traduções do menu e dashboard - Seletor de idioma no dropdown do utilizador (sidebar footer) - Menu lateral traduzido dinamicamente - Dashboard principal com textos traduzidos (título, cards, alertas) - Persistência da preferência de idioma no localStorage

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -114,5 +114,89 @@
     "anterior": "Previous",
     "sim": "Yes",
     "nao": "No"
+  },
+  "menu": {
+    "groups": {
+      "ai": "Artificial Intelligence",
+      "main": "Main",
+      "management": "Management",
+      "reports": "Reports",
+      "history": "History",
+      "alerts": "Alerts",
+      "meetings": "Meetings",
+      "results": "Results",
+      "pending": "Tasks"
+    },
+    "items": {
+      "assistenteIA": "AI Assistant",
+      "dashboard": "Dashboard",
+      "lojas": "Stores",
+      "gestores": "Managers",
+      "utilizadores": "Users",
+      "minhasLojas": "My Stores",
+      "relatoriosGestores": "Manager Reports",
+      "relatorioLivre": "Free Report",
+      "relatorioCompleto": "Complete Report",
+      "meusRelatorios": "My Reports",
+      "relatoriosIA": "AI Reports",
+      "historicoIA": "AI History",
+      "resumosGlobais": "Global Summaries",
+      "novaOcorrencia": "New Occurrence",
+      "historicoOcorrencias": "Occurrence History",
+      "historicoPontos": "Points History",
+      "alertas": "Alerts",
+      "configAlertas": "Alert Settings",
+      "categorias": "Categories",
+      "reunioesGestores": "Manager Meetings",
+      "topicosReuniao": "Meeting Topics",
+      "reunioesLojas": "Store Meetings",
+      "reunioesQuinzenais": "Bi-weekly Meetings",
+      "uploadResultados": "Upload Results",
+      "dashboardResultados": "Results Dashboard",
+      "relatorioIAResultados": "AI Results Report",
+      "comparacaoLojas": "Store Comparison",
+      "historicoLoja": "Store History",
+      "relatorioBoard": "Board Report",
+      "todo": "To-Do",
+      "pendentes": "Pending"
+    }
+  },
+  "dashboard": {
+    "welcome": "Hello",
+    "welcomeSubtitle": "Welcome to PoweringEG Platform 2.0",
+    "totalLojas": "Total Stores",
+    "lojasAtivas": "Active stores in the network",
+    "gestores": "Managers",
+    "gestoresAtivos": "Active managers",
+    "relatorios": "Reports",
+    "relatoriosEstesMes": "Reports this month",
+    "pendentes": "Pending",
+    "pendentesAtivos": "Active pending items",
+    "alertas": "Alerts",
+    "alertasPendentes": "Pending alerts",
+    "atencaoPendentes": "Attention: Pending items to resolve",
+    "existem": "There are",
+    "pendentesHaMais": "pending item(s) unresolved for more than 7 days.",
+    "verPendentes": "View Pending",
+    "dicaIA": "AI Tip",
+    "atualizarDica": "Refresh tip",
+    "previsoesSemana": "Weekly Predictions",
+    "feedAtividade": "Activity Feed",
+    "modoEscuro": "Dark Mode",
+    "modoClaro": "Light Mode",
+    "signIn": "Sign In",
+    "signInContinue": "Sign in to continue",
+    "signInRequired": "Access to this dashboard requires authentication. Continue to launch the login flow.",
+    "signOut": "Sign Out"
+  },
+  "auth": {
+    "signIn": "Sign In",
+    "signOut": "Sign Out",
+    "signInContinue": "Sign in to continue",
+    "signInRequired": "Access to this dashboard requires authentication."
+  },
+  "theme": {
+    "dark": "Dark Mode",
+    "light": "Light Mode"
   }
 }
