--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -114,5 +114,89 @@
     "anterior": "Anterior",
     "sim": "Sim",
     "nao": "Não"
+  },
+  "menu": {
+    "groups": {
+      "ai": "Inteligência Artificial",
+      "main": "Principal",
+      "management": "Gestão",
+      "reports": "Relatórios",
+      "history": "Histórico",
+      "alerts": "Alertas",
+      "meetings": "Reuniões",
+      "results": "Resultados",
+      "pending": "Tarefas"
+    },
+    "items": {
+      "assistenteIA": "Assistente IA",
+      "dashboard": "Dashboard",
+      "lojas": "Lojas",
+      "gestores": "Gestores",
+      "utilizadores": "Utilizadores",
+      "minhasLojas": "Minhas Lojas",
+      "relatoriosGestores": "Relatórios Gestores",
+      "relatorioLivre": "Relatório Livre",
+      "relatorioCompleto": "Relatório Completo",
+      "meusRelatorios": "Meus Relatórios",
+      "relatoriosIA": "Relatórios IA",
+      "historicoIA": "Histórico IA",
+      "resumosGlobais": "Resumos Globais",
+      "novaOcorrencia": "Nova Ocorrência",
+      "historicoOcorrencias": "Histórico Ocorrências",
+      "historicoPontos": "Histórico Pontos",
+      "alertas": "Alertas",
+      "configAlertas": "Config. Alertas",
+      "categorias": "Categorias",
+      "reunioesGestores": "Reuniões Gestores",
+      "topicosReuniao": "Tópicos Reunião",
+      "reunioesLojas": "Reuniões Lojas",
+      "reunioesQuinzenais": "Reuniões Quinzenais",
+      "uploadResultados": "Upload Resultados",
+      "dashboardResultados": "Dashboard Resultados",
+      "relatorioIAResultados": "Relatório IA Resultados",
+      "comparacaoLojas": "Comparação Lojas",
+      "historicoLoja": "Histórico da Loja",
+      "relatorioBoard": "Relatório Board",
+      "todo": "To-Do",
+      "pendentes": "Pendentes"
+    }
+  },
+  "dashboard": {
+    "welcome": "Olá",
+    "welcomeSubtitle": "Bem-vindo ao PoweringEG Platform 2.0",
+    "totalLojas": "Total de Lojas",
+    "lojasAtivas": "Lojas ativas na rede",
+    "gestores": "Gestores",
+    "gestoresAtivos": "Gestores ativos",
+    "relatorios": "Relatórios",
+    "relatoriosEstesMes": "Relatórios este mês",
+    "pendentes": "Pendentes",
+    "pendentesAtivos": "Pendentes ativos",
+    "alertas": "Alertas",
+    "alertasPendentes": "Alertas pendentes",
+    "atencaoPendentes": "Atenção: Pendentes por resolver",
+    "existem": "Existem",
+    "pendentesHaMais": "pendente(s) há mais de 7 dias sem resolução.",
+    "verPendentes": "Ver Pendentes",
+    "dicaIA": "Dica da IA",
+    "atualizarDica": "Atualizar dica",
+    "previsoesSemana": "Previsões da Semana",
+    "feedAtividade": "Feed de Atividade",
+    "modoEscuro": "Modo Escuro",
+    "modoClaro": "Modo Claro",
+    "signIn": "Iniciar Sessão",
+    "signInContinue": "Inicie sessão para continuar",
+    "signInRequired": "O acesso a este dashboard requer autenticação. Continue para iniciar o fluxo de login.",
+    "signOut": "Terminar Sessão"
+  },
+  "auth": {
+    "signIn": "Iniciar Sessão",
+    "signOut": "Terminar Sessão",
+    "signInContinue": "Inicie sessão para continuar",
+    "signInRequired": "O acesso a este dashboard requer autenticação."
+  },
+  "theme": {
+    "dark": "Modo Escuro",
+    "light": "Modo Claro"
   }
 }
